--- a/extension/settings.html
+++ b/extension/settings.html
@@ -35,8 +35,8 @@
                 <div class="tabBox">
                     <ul class="tabs">
                         <li id="general" class="selected"><a href="#">General</a></li>
+                        <li id="lastfm"><a href="#">last.fm</a></li>
                         <li id="notifications"><a href="#">Notifications</a></li>
-                        <li id="misc"><a href="#">Misc</a></li>
                         <li id="about"><a href="#">About</a></li>
                     </ul>
 
@@ -56,7 +56,7 @@
                             <input class="setting_checkbox" type="checkbox" name="debug_mode" id="debug_mode"><label for="debug_mode">debug mode</label>
                         </div>
 
-                        <div id="misc">
+                        <div id="lastfm">
                         	<div class="subtitle">last.fm<span id="scrobbleToken"></span></div>
                             <button id="scrobbleLoginButton" class="controlButton">Authenticate</button>
                             <div id="scrobbleTokenContainer">
@@ -65,16 +65,6 @@
                                 <label for="scrobble_delay">song scrobble delay (seconds):</label><input type="text" class="setting_textbox" name="scrobble_delay" maxlength="4" />
                                 <br>
                                 <button id="scrobbleLogoutButton" class="controlButton">Logout</button>
-                            </div>
-                            <hr>
-                            <div class="subtitle" style="display: inline;">Scheduler
-                            	<div id="schedule_enable">
-                            		<label><input type="radio" name="toggle"><span>On</span></label>
-    								<label><input type="radio" name="toggle" checked><span>Off</span></label>
-                            	</div>
-                            </div>
-                            <div id="scheduler">
-                            	
                             </div>
                         </div>
 
