last.fm settings window changes

--- a/extension/settings.html
+++ b/extension/settings.html
@@ -57,7 +57,7 @@
                         </div>
 
                         <div id="lastfm">
-                        	<div class="subtitle">last.fm<span id="scrobbleToken"></span></div>
+                        	<div class="subtitle" id="scrobbleToken">last.fm</div>
                             <button id="scrobbleLoginButton" class="controlButton">Authenticate</button>
                             <div id="scrobbleTokenContainer">
                                 <input class="setting_checkbox" type="checkbox" name="lastfm_love_with_like" id="lastfm_love_with_like"><label for="lastfm_love_with_like">love song on last.fm when I thumb up on Pandora</label>
