ladies and gentlemen may i present to you....RadioEnhancer.
*sigh*

--- a/extension/notification.html
+++ b/extension/notification.html
@@ -11,7 +11,7 @@
                 <div id="albumArt"></div>
                 
                 <div id="artistInfo">
-                    <div id="songName">PandoraEnhancer</div>
+                    <div id="songName">RadioEnhancer</div>
                     <div id="artistName">Brandon Sachs & Curt Hostetter</div>
                     <div id="albumName">Sounds of Manliness</div>
                 </div>
