missed one in settings.html. we also need a new logo.

--- a/extension/settings.html
+++ b/extension/settings.html
@@ -120,7 +120,7 @@
 
 
                 <div id="about_radio_enhancer">
-                    RadioEnhancer (v<span class="PE-version">80085</span>) by <span class="link" id="brandon">Brandon Sachs</span> & <span class="link" id="curt">Curt Hostetter</span>
+                    RadioEnhancer (v<span class="RE-version">80085</span>) by <span class="link" id="brandon">Brandon Sachs</span> & <span class="link" id="curt">Curt Hostetter</span>
                 </div>
 
             </div>
