--- a/extension/background.html
+++ b/extension/background.html
@@ -7,6 +7,6 @@
     </head>
 
     <body>
-        <textarea id="PE-clipboard-temp"></textarea>
+        <textarea id="RE-clipboard-temp"></textarea>
     </body>
 </html>
