auto mute is now a user option, enabled by default. whoo!

--- a/extension/background.html
+++ b/extension/background.html
@@ -1,12 +1,12 @@
 <html>
     <head>
-        <script type="text/javascript" src="js/jquery-1.6.4.min.js"></script>
+	<script type="text/javascript" src="js/jquery-1.6.4.min.js"></script>
 		<script type="text/javascript" src="js/md5.js"></script>
 		<script type="text/javascript" src="js/background.js"></script>
-        <script type="text/javascript" src="js/lastfm-api.js"></script>
+	<script type="text/javascript" src="js/lastfm-api.js"></script>
     </head>
 
     <body>
-        <textarea id="PE-clipboard-temp"></textarea>
+	<textarea id="RE-clipboard-temp"></textarea>
     </body>
 </html>
