--- a/extension/settings.html
+++ b/extension/settings.html
@@ -30,7 +30,7 @@
 		    <div class="float_left" id="twitter"><a href="https://twitter.com/share" class="twitter-share-button" data-url="https://chrome.google.com/webstore/detail/lfijnebfkjdclmcedinoknekamigckii" data-text="Check out RadioEnhancer for Chrome!" data-count="horizontal" data-via="RadioEnhancer">Tweet</a><script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script></div>
 		    
 		    <!--<div class="fb-like float_left" data-href="http://www.facebook.com/pandoraenhancer" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" style="margin-left: 25px;"></div>-->
-		    <!--<div class="fb-like float_left" data-href="https://www.facebook.com/radioenhancer" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" style="margin-left: 25px;"></div>-->
+		    <div class="fb-like float_left" data-href="https://www.facebook.com/radioenhancer" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" style="margin-left: 25px;"></div>
 		    
 		</div>
 
@@ -48,6 +48,7 @@
 		    <div class="content">
 
 			<div id="general" class="active">
+			    <input class="setting_checkbox" type="checkbox" name="auto_mute_audio_ads" id="auto_mute_audio_ads"><label for="auto_mute_audio_ads">auto-mute audio ads</label><br />
 			    <input class="setting_checkbox" type="checkbox" name="remove_ads" id="remove_ads"><label for="remove_ads">remove banner ads</label><br />
 			    <input class="setting_checkbox" type="checkbox" name="remove_videos" id="remove_videos"><label for="remove_videos">remove video ads</label><br />
 			    <input class="setting_checkbox" type="checkbox" name="remove_still_listening" id="remove_still_listening"><label for="remove_still_listening">skip "Still Listening?" dialog</label><br />
