multiple things for name change, manifest change.

--- a/extension/authentication_success.html
+++ b/extension/authentication_success.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 	<script src="js/jquery-1.7.2.min.js"></script>
-	<title>PandoraEnhancer - Authentication Successful</title>
+	<title>RadioEnhancer - Authentication Successful</title>
 	<script>
 	    var bgPage = chrome.extension.getBackgroundPage();
 	    var token = window.location.search;
@@ -64,7 +64,7 @@
 			<div id="successContainer">
 				<div id="text-logo">
 					<img src="images/logo-48.png">
-					Pandora<br>
+					Radio<br>
 					<span id="text-logo-span">Enhancer</span>
 				</div>
 				<div id="success">
