lots of changes for notification bug, security violations, etc

--- a/extension/background.html
+++ b/extension/background.html
@@ -1,4 +1,4 @@
-<html>
+<!doctype html>
     <head>
 	<script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
 	<script type="text/javascript" src="js/md5.js"></script>
