fixes fb button

--- a/extension/settings.html
+++ b/extension/settings.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<html>
     <head>
 	<script src="js/jquery-1.7.2.min.js"></script>
 	<script src="js/settings.js"></script>
@@ -29,7 +29,9 @@
 		    <!--<div class="float_left" id="twitter"><a href="https://twitter.com/share" class="twitter-share-button" data-url="https://chrome.google.com/webstore/detail/ipfamfogncacknldkaoekchdeddmfnlg" data-text="Check out RadioEnhancer for Chrome!" data-count="horizontal" data-via="RadioEnhancer">Tweet</a><script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script></div>-->
 		    <div class="float_left" id="twitter"><a href="https://twitter.com/share" class="twitter-share-button" data-url="https://chrome.google.com/webstore/detail/lfijnebfkjdclmcedinoknekamigckii" data-text="Check out RadioEnhancer for Chrome!" data-count="horizontal" data-via="RadioEnhancer">Tweet</a><script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script></div>
 		    
-		    <div class="fb-like float_left" data-href="https://www.facebook.com/radioenhancer" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" style="margin-left: 25px;"></div>
+<!--<div class="fb-like float_left" data-href="https://www.facebook.com/radioenhancer" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" style="margin-left: 25px;"></div>-->
+
+<iframe class="fb-like float_left" style="margin-left: 25px; height:20px;" src="http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fradioenhancer&amp;send=false&amp;layout=button_count&amp;width=100&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21&amp;appId=335923160045" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:100px; height:21px;" allowTransparency="true"></iframe>
 		    
 		</div>
 
