--- a/extension/authentication_success.html
+++ b/extension/authentication_success.html
@@ -1,14 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
     <head>
-	<script src="js/jquery-1.7.2.min.js"></script>
+	<script src="js/lastfm-auth.js"></script>
 	<title>RadioEnhancer - Authentication Successful</title>
-	<script>
-	    var bgPage = chrome.extension.getBackgroundPage();
-	    var token = window.location.search;
-	    var tokenPieces = token.split('=');
-	    bgPage.responseDispatcher('authenticated', tokenPieces[1]);
-	</script>
 
 	<style>
 	    body {
