Added option to change title based on current song

--- a/extension/settings.html
+++ b/extension/settings.html
@@ -59,6 +59,7 @@
 						<input class="setting_checkbox" type="checkbox" name="selectable_lyrics" id="selectable_lyrics"><label for="selectable_lyrics">selectable/copy lyrics</label><br />
 						<input class="setting_checkbox" type="checkbox" name="decensor_lyrics" id="decensor_lyrics"><label for="decensor_lyrics">de-censor lyrics</label><br />
 						<input class="setting_checkbox" type="checkbox" name="header_config" id="header_config"><label for="header_config">append "configure" link to Pandora user menu</label><br />
+						<input class="setting_checkbox" type="checkbox" name="set_title" id="set_title"><label for="set_title">change title bar when song changes</label><br />
 						<input class="setting_checkbox" type="checkbox" name="debug_mode" id="debug_mode"><label for="debug_mode">debug mode</label>
 					</div>
 
