--- a/extension/settings.html
+++ b/extension/settings.html
@@ -87,10 +87,6 @@
 					<div id="about">
 						<span id="header">RadioEnhancer <span class="RE-version">80085</span></span>
 						<hr>
-						Brandon Sachs - <span class="link" id="brandon">http://brandon-sachs.com</span>
-						<br>
-						Curt Hostetter &nbsp; - <span class="link" id="curt">http://curthostetter.com</span>
-						<br><br>
 						Follow us on twitter - <span class="link" id="twitter">@RadioEnhancer</span>
 						<br>
 						Found a bug? Let us know - <span class="link" id="bug">http://cbcoding.com</span>
@@ -126,7 +122,7 @@
 
 
 		<div id="about_radio_enhancer">
-			RadioEnhancer (v<span class="RE-version">80085</span>) by <span class="link" id="brandon">Brandon Sachs</span> & <span class="link" id="curt">Curt Hostetter</span>
+			RadioEnhancer (v<span class="RE-version">80085</span>)
 		</div>
 
 	</div>
